# SFML_Gravity

./: .gitignore  CMakeLists.txt  README.md
include/Bodies/: body.hpp  boid.hpp
include/Graphics/: assetsManager.hpp  scenesManager.hpp  window.hpp
include/Math/: vector.hpp
include/Scenes/: mainScene.hpp
include/Scripts/: tools.hpp
source/: main.cpp
source/Bodies/: body.cpp  boid.cpp
source/Graphics/: assetsManager.cpp  scenesManager.cpp  window.cpp
source/Math/: vector.cpp
source/Scenes/: mainScene.cpp
source/Scripts/: tools.cpp
